rnsc/test_data/rns_integration/error/parser/type_hints/double/missing_operand.rns
.class @double
.super java/lang/Object
